fixed content_header z-index

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1591,7 +1591,7 @@ section .stat_year {
 	-webkit-transition: all .4s cubic-bezier(.4,0,.2,1);
 	-o-transition: all .4s cubic-bezier(.4,0,.2,1);
 	transition: all .4s cubic-bezier(.4,0,.2,1);
-	z-index: 50;
+	z-index: 40;
 	border-bottom: 2px solid #ff5722;
 }
 
